# CPP-Lab

./: .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  conanfile.txt  deployment.yaml  dockerignore  test.txt
.github/workflows/: ci.yml
src/: main.cpp
tests/: test_main.cpp
